--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body {
 .rw1 {
     padding-top: 20px;
 }
-
+/* Box boarders*/
 .hr1 {
     max-width: 800px;
     margin-left: 550px;
@@ -69,11 +69,20 @@ body {
     border: 1px solid #00B381;
 }
 
-.clo2 {
+.col {
     border: 1px dotted #00B381;
 }
 
 .rww3 {
-    height: 300px;
+    height: 600px;
     border: 1px solid #00B381;
+}
+
+.rww4 {
+    height: 200px;
+    border: 1px solid #00B381;
+    color: antiquewhite;
+    font-family: 'Sofia Sans', sans-serif;
+    text-align: center;
+    font-size: 55px;
 }
