--- a/css/style.css
+++ b/css/style.css
@@ -73,10 +73,13 @@ body {
     border: 1px solid #00B381;
     background: url('../img/mebtr.jpg') no-repeat center center/cover;
     opacity: 70%;
+
 }
 
 .col {
     border: 1px dotted #00B381;
+    align-items: center;
+    text-align: center;
 }
 
 .rww3 {
@@ -116,5 +119,71 @@ body {
 .col img {
   align-items: center;
   align-content: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
+.headings {
+
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 3rem;
+    text-align: center;
+    margin: 40px 0px;
+
+
+}
+
+.rww8 {
+      height: 300px;
+}
+
+
+#contact{
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  background-color: #0D1B2A;
+  color: white;
+  padding: 20px;
+}
+
+.form{
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  align-items: center;
+  margin: 20px 0px;
+}
+
+.input{
+  padding: 12px;
+  margin: 15px;
+  width: 30%;
+  border: none;
+  outline: none;
+}
+
+#msg{
+  width: 20%;
+  padding: 10px;
+  margin: 15px;
+  border:  none;
+  outline: none;
+}
+
+#send{
+  padding: 10px;
+  width: 10%;
+  margin: 40px;
+  border: none;
+  outline: none;
+
+}
+
+#send:hover{
+  cursor: pointer;
+  box-shadow: 0 0 10px white;
+
+}
